--- a/src/app/sistema/compras/pedidos-compras/listar-pedidos-compras/listar-pedidos-compras.component.html
+++ b/src/app/sistema/compras/pedidos-compras/listar-pedidos-compras/listar-pedidos-compras.component.html
@@ -1,77 +1,113 @@
 <app-navbar></app-navbar>
 
 <div class="row p-0 m-0">
-  <div class="col-auto m-0 p-0 bg-custom-light">
-    <app-sidemenu></app-sidemenu>
-  </div>
-  <div class="col m-0 bg-custom-white">
-    <!-- Página home -->
-    <div class="container">
-
-      <!-- Botão de voltar -->
-      <div class="row m-0 justify-content-start mt-4">
-        <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema">
-          <i class="bi-arrow-left fs-3 text-secondary"></i>
-        </a>
-      </div>
-
-      <div class="row mt-4 m-0 p-0">
-
-        <!-- Botão Adicionar -->
-        <div class="col-4 px-2 p-0 m-0">
-          <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" routerLink="/sistema/compras/pedidos/criar">
-            <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Adicionar</h5>
-            <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
-          </a>
-        </div>
-
-        <!-- Pesquisar -->
-        <div class="col-4 px-2 p-0 m-0 position-relative">
-          <input class="form-control form-control-lg border-0 h-limited-sm py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar">
-          <a>
-            <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
-          </a>
-        </div>
-
-        <!-- Botão Filtro -->
-        <div class="col-4 px-2 p-0 m-0">
-          <a class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
-            <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
-            <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
-          </a>
-        </div>
-
-
-      </div>
-
-      <!-- Tabela de contas -->
-      <div class="table-responsive mt-5">
-        <table class="table text-custom-dark">
-          <thead>
-            <tr>
-              <th scope="col">Cód.</th>
-              <th scope="col">Data</th>
-              <th scope="col">Fornecedor</th>
-              <th scope="col">Total</th>
-              <th scope="col">Ação</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="align-items-center" *ngFor="let pedidos of pedidos">
-              <th scope="row">{{ pedidos.codigo }}</th>
-              <td>{{ pedidos.data }}</td>
-              <td>{{ pedidos.fornecedor }}</td>
-              <td>{{ pedidos.total | currency:'BRL'}}</td>
-              <td>
-                <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
-                <!-- <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i> -->
-                <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer"></i>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <!-- /Tabela de contas -->
+    <div class="col-auto m-0 p-0 bg-custom-light">
+        <app-sidemenu></app-sidemenu>
     </div>
-  </div>
+    <div class="col m-0 bg-custom-white">
+        <!-- Página home -->
+        <div class="container">
+            <!-- Botão de voltar -->
+            <div class="row m-0 justify-content-start mt-4">
+                <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema">
+                    <i class="bi-arrow-left fs-3 text-secondary"></i>
+                </a>
+            </div>
+
+            <div class="row mt-4 m-0 p-0">
+                <!-- Botão Adicionar -->
+                <div class="col-4 px-2 p-0 m-0">
+                    <a class="
+              rounded-15
+              py-1
+              px-4
+              bg-custom-success
+              h-100
+              d-flex
+              justify-content-between
+              shadow-sm
+            " routerLink="/sistema/compras/pedidos/criar">
+                        <h5 class="fw-normal my-auto text-truncate text-custom-dark">
+                            Adicionar
+                        </h5>
+                        <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark"></i>
+                    </a>
+                </div>
+
+                <!-- Pesquisar -->
+                <div class="col-4 px-2 p-0 m-0 position-relative">
+                    <input class="
+              form-control form-control-lg
+              border-0
+              h-limited-sm
+              py-2
+              ps-4
+              pe-5
+              rounded-15
+              shadow-sm
+            " type="text" placeholder="Pesquisar" />
+                    <a>
+                        <i class="
+                bi-search
+                fs-4
+                position-absolute
+                translate-middle
+                top-50
+                me-4
+                end-0
+              "></i>
+                    </a>
+                </div>
+
+                <!-- Botão Filtro -->
+                <div class="col-4 px-2 p-0 m-0">
+                    <a class="
+              rounded-15
+              py-2
+              px-4
+              bg-white
+              h-limited
+              d-flex
+              justify-content-between
+              shadow-sm
+            ">
+                        <h5 class="fw-normal my-auto text-truncate text-custom-dark">
+                            Filtro
+                        </h5>
+                        <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Tabela de contas -->
+            <div class="table-responsive mt-5">
+                <table class="table text-custom-dark">
+                    <thead>
+                        <tr>
+                            <th scope="col">Cód.</th>
+                            <th scope="col">Data</th>
+                            <th scope="col">Fornecedor</th>
+                            <th scope="col">Total</th>
+                            <th scope="col">Ação</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="align-items-center" *ngFor="let pedidos of pedidos">
+                            <th scope="row">{{ pedidos.codigo }}</th>
+                            <td>{{ pedidos.data }}</td>
+                            <td>{{ pedidos.fornecedor }}</td>
+                            <td>{{ pedidos.total | currency: "BRL" }}</td>
+                            <td>
+                                <i class="fs-5 bi-eye-fill icon-view p-3" data-bs-toggle="modal" data-bs-target="#viewPedido" cursor="pointer"></i>
+                                <!-- <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i> -->
+                                <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer"></i>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- /Tabela de contas -->
+        </div>
+    </div>
 </div>
+<app-view-pedido></app-view-pedido>
