campo adicionar banner

--- a/src/app/sistema/config/cadastro-de-loja/cadastrar-loja/cadastrar-loja.component.html
+++ b/src/app/sistema/config/cadastro-de-loja/cadastrar-loja/cadastrar-loja.component.html
@@ -73,6 +73,20 @@
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="number" placeholder="Capacidade de estoque" >
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Capacidade de estoque</label>
           </div>
+
+          <!-- adicionar banner -->
+          <div class="col-4 px-2 pt-4 p-0 m-0">
+            <div class="upload__image rounded-15 shadow-sm p-3">
+                <label class="upload__image--wrapper" (input)="uploadImage($event)">
+                  <input type="file">
+                  <img  src="./assets/add.png" alt="" class="upload__image--img">
+
+                  <span class="mt-3 btn rounded-15 py-1 px-4 btn-outline-secondary">{{text}}</span>
+                </label>
+            </div>
+
+            <small class="ps-3">*dimensão do banner 1920x500 pixels</small>
+        </div>
         </div>
 
         <!-- Footer -->
