--- a/src/app/sistema/home/home.component.html
+++ b/src/app/sistema/home/home.component.html
@@ -22,8 +22,8 @@
       </div>
 
       <div class="row mb-5">
-        <div class="col-md-8">
-          <canvas ngChartjs [datasets]="lineChartData" [labels]="lineChartLabels"
+        <div class="col-12">
+          <canvas height="60px" ngChartjs [datasets]="lineChartData" [labels]="lineChartLabels"
             [options]="lineChartOptions" [legend]="lineChartLegend" [chartType]="lineChartType"
             [inlinePlugins]="inlinePlugin">
           </canvas>
