--- a/src/app/sistema/vendas/clientes/pedidos-realizados/pedidos-realizados.component.html
+++ b/src/app/sistema/vendas/clientes/pedidos-realizados/pedidos-realizados.component.html
@@ -25,6 +25,13 @@
     </select>
   </div>
 
+  <div class="col-2 d-grid px-2 pt-4 p-0 m-0">
+    <button type="button"
+      class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm">
+      <h5 class="fw-normal my-auto text-truncate text-custom-dark">Gerar relatório</h5>
+    </button>
+  </div>
+
 </div>
 
 
@@ -82,4 +89,7 @@
   <div class="col-1">
     <p>{{ pedido.total | currency:'BRL' }}</p>
   </div>
+
+<div class="row m-0 pb-4 mt-4 justify-content-end">
+          
 </div>
