--- a/src/app/sistema/vendas/editar-clientes/cadastrar-cliente/cadastrar-cliente.component.html
+++ b/src/app/sistema/vendas/editar-clientes/cadastrar-cliente/cadastrar-cliente.component.html
@@ -62,7 +62,7 @@
 
       <!-- RG -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input mask="00.000.000-0||0.000.000-0" [class.invalid]="clienteForm.controls.rg.invalid && (clienteForm.controls.rg.dirty || clienteForm.controls.rg.touched)" formControlName="rg" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
+        <input mask="00.000.000-A||0.000.000-A" [class.invalid]="clienteForm.controls.rg.invalid && (clienteForm.controls.rg.dirty || clienteForm.controls.rg.touched)" formControlName="rg" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
           type="text" placeholder="RG">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">RG</label>
       </div>
