--- a/src/app/sistema/rh/listar-colaboradores/listar-colaboradores.component.html
+++ b/src/app/sistema/rh/listar-colaboradores/listar-colaboradores.component.html
@@ -48,7 +48,7 @@
       </div>
 
       <!-- Títulos da Tabela -->
-      <div class="row m-0 my-5 text-custom-dark justify-content-center">
+      <div class="d-flex row m-0 my-5 text-custom-dark justify-content-center">
         <div class="col-2">
           <h5 class="fw-bold text-truncate">Nome</h5>
         </div>
@@ -64,12 +64,12 @@
         <div class="col-2">
           <h5 class="fw-bold text-truncate">Loja</h5>
         </div>
-        <div class="col-2">
-          <h5 class="fw-bold text-truncate d-none">Ações</h5>
+        <div class="col-2 d-flex justify-content-end">
+          <i class="fs-5 bi-search icon-search px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer" data-bs-toggle="modal" data-bs-target="#pesquisarPedidos"></i>
         </div>
       </div>
       <!-- Tabela -->
-      <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let rh of profiles">
+      <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let rh of atualPage">
         <div class="col-2">
           <p>{{ rh.name }} {{ rh.surname }}</p>
         </div>
@@ -93,6 +93,22 @@
       </div>
 
     </div>
+    <div class="col-12 row mt-3 d-flex justify-content-around">
+      <div class="col-3 row m-auto">
+        <button class="rounded-15 py-1 px-4 bg-custom-dark h-100 d-flex justify-content-between shadow-sm border-0" (click)="anterior()" [class.noActiveButton]="this.atualPageNumber == 0">
+          <h5 class="w-100 fw-normal my-auto text-truncate text-white text-center">Anterior</h5>
+        </button>
+      </div>
+      <div class="col-1 d-flex justify-content-end">
+        <p class="h3 fw-normal text-custom-dark">{{atualPageNumber + 1}}/{{pagesNumber}}</p>
+      </div>
+      <div class="col-3 row m-auto">
+        <button class="rounded-15 py-1 px-4 bg-custom-dark h-100 d-flex justify-content-between shadow-s border-0" (click)="proximo()" [class.noActiveButton]="this.atualPageNumber == (pagesNumber - 1)">
+          <h5 class="w-100 fw-normal my-auto text-truncate text-white text-center">Proximo</h5>
+        </button>
+      </div>
+    </div> 
     <!-- /Página -->
   </div>
 </div>
+<app-pesquisar-colaborador></app-pesquisar-colaborador>
